<resources>
    <string name="app_name">Card Wallet</string>
    <string name="about_us">About Us</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="front_side_image">Front Side Image</string>
    <string name="back_side_image">Back Side Image</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="rotate">Rotate</string>
    <string name="crop">Crop</string>
    <string name="themeText">Wallet reimagined:\ncarry your cards\ndigitally</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us_settings">About Us</string>
    <string name="share_app">Share App</string>
    <string name="rate_us_settings">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="rename">Rename</string>
    <string name="add_category">Add Category</string>
    <string name="permanently_delete">Permanently delete</string>
    <string name="add">Add</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="oermissionDeniedDialog">Camera permission has been denied. Please enable it in the app settings to continue.</string>
    <string name="settings">Settings</string>
    <string name="later">Later</string>
    <string name="please_rate_our_app">Please rate our App</string>
    <string name="exit">Exit</string>
</resources>