<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        android:layout_margin="20dp"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:backgroundTint="@color/addCatBgColor"
        />


    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rename"
        android:fontFamily="@font/poppinsregular"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:backgroundTint="@color/addCatBgColor"
        />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:gravity="center"
        android:fontFamily="@font/poppinsregular"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"

        />

</LinearLayout>
