<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="250dp"
    android:background="@drawable/rounded_corner_bg"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameNewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:hint="@string/name"
        android:textColorHint="@color/grey"
        android:minHeight="50dp"
        android:background="@drawable/bg_display_textviews"
        android:fontFamily="@font/poppinsregular"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/iconSpinner"
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_spinner"
        android:minHeight="50dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corner_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCancl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/add"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"

            android:fontFamily="@font/poppinsregular"
            android:textSize="15sp"
            />


    </LinearLayout>


</LinearLayout>
