<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white">


    <ImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:fontFamily="@font/poppinsregular"
                android:textSize="12sp"
                android:gravity="center"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/rotateClockwiseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rotate"
                android:layout_gravity="center"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingBottom="10dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rotate"
                android:fontFamily="@font/poppinsregular"
                android:textSize="12sp"
                android:gravity="center"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/cropButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_crop"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crop"
                android:fontFamily="@font/poppinsregular"
                android:textSize="12sp"
                android:gravity="center"
                />

        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:padding="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/transparentColor"
        android:src="@drawable/ic_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
