<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_meduim"
            android:gravity="center"
            android:shadowColor="#1A000000"
            android:shadowDx="0"
            android:shadowDy="8"
            android:shadowRadius="1"
            android:text="Settings"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_back_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!--        <ImageView-->
        <!--            android:id="@+id/saveButton"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginRight="10dp"-->
        <!--            android:padding="15dp"-->
        <!--            android:src="@drawable/ic_btn_save"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:id="@+id/linearOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_about_us_"
                android:padding="15dp"
                android:layout_marginEnd="10dp"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/about_us_settings"
                android:gravity="center_vertical"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsregular"
                android:textSize="17sp"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next"
                android:padding="15dp"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/textColor"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            />


        <LinearLayout
            android:id="@+id/linearTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"


            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_share_app"
                android:padding="15dp"
                android:layout_marginEnd="10dp"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/share_app"
                android:gravity="center_vertical"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsregular"
                android:textSize="17sp"
                android:layout_weight="1"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next"
                android:padding="15dp"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/textColor"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"

            />


        <LinearLayout
            android:id="@+id/linearThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"


            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_rate_us_"
                android:padding="15dp"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/rate_us_settings"
                android:gravity="center_vertical"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsregular"
                android:textSize="17sp"
                android:layout_weight="1"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next"
                android:padding="15dp"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/textColor"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"

            />


        <LinearLayout
            android:id="@+id/linearFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"


            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_policy"
                android:padding="15dp"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/privacy_policy"
                android:gravity="center_vertical"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsregular"
                android:textSize="17sp"
                android:layout_weight="1"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next"
                android:padding="15dp"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/textColor"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            />


        <LinearLayout
            android:id="@+id/linearFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"


            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_feedback_"
                android:padding="15dp"
                android:layout_marginEnd="10dp"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/feedback"
                android:gravity="center_vertical"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppinsregular"
                android:textSize="17sp"
                android:layout_weight="1"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next"
                android:padding="15dp"
                />


        </LinearLayout>





    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>